; ModuleID = '/home/carl/AnghaBench/redis/src/extr_rdb.c_stopLoading.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_rdb.c_stopLoading.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }

@server = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@rdbFileBeingLoaded = common dso_local global i32* null, align 8
@REDISMODULE_EVENT_LOADING = common dso_local global i32 0, align 4
@REDISMODULE_SUBEVENT_LOADING_ENDED = common dso_local global i32 0, align 4
@REDISMODULE_SUBEVENT_LOADING_FAILED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @stopLoading(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @server, i32 0, i32 0), align 8
  store i32* null, i32** @rdbFileBeingLoaded, align 8
  %3 = load i32, i32* @REDISMODULE_EVENT_LOADING, align 4
  %4 = load i32, i32* %2, align 4
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %6, label %8

6:                                                ; preds = %1
  %7 = load i32, i32* @REDISMODULE_SUBEVENT_LOADING_ENDED, align 4
  br label %10

8:                                                ; preds = %1
  %9 = load i32, i32* @REDISMODULE_SUBEVENT_LOADING_FAILED, align 4
  br label %10

10:                                               ; preds = %8, %6
  %11 = phi i32 [ %7, %6 ], [ %9, %8 ]
  %12 = call i32 @moduleFireServerEvent(i32 %3, i32 %11, i32* null)
  ret void
}

declare dso_local i32 @moduleFireServerEvent(i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
